--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "predeploy": "rm -rf ./build && webpack",
+    "predeploy": "webpack",
     "deploy": "rm -rf ./node_modules/.cache/gh-pages && gh-pages --branch gh-pages -d build",
     "start": "webpack serve --mode development"
   },
@@ -14,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@tsconfig/node14": "^1.0.1",
-    "common-igrid": "^1.0.7",
+    "common-igrid": "^1.0.10",
     "common-iutils": "^1.0.8",
     "css-loader": "^6.5.1",
     "gh-pages": "^3.2.3",
