main meta tag remove

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_SITE_TITLE=이력서 - 조인태
-REACT_APP_META_TAG=<meta name="google-site-verification" content="bU2UGUDdYdQUHyzjmchr0fuWOjAmADsDMxM_j3qCYQY" />
+REACT_APP_META_TAG=
